# agri-schemas

./: .gitignore  README.md  TODO.md  agri-schema-0.1.ttl  agri-schema.ttl  agri-schemas.ttl
biotools/: __init__.py  bioportal.py  default-env.sh
dataset-builds/: .gitignore  README.md  data-build.sh  init-env.sh  install-ubuntu.sh
dataset-builds/agrischemas-gxa/: brandizi-env.sh  data-build.sh  data-build.snakefile  init-env.sh  install.sh  logging.yml  requirements-local.txt  requirements.txt  update.sh
dataset-builds/agrischemas-gxa/environments/: brandizi-env.sh
dataset-builds/agrischemas-gxapy/: README.md  pyproject.toml
dataset-builds/agrischemas-gxapy/src/agrischemas/ebigxa/: ae.py  gxa-rdf-defaults.ttl  gxa.py  utils.py
dataset-builds/agrischemas-gxapy/src/agrischemaspy/: ae.py
dataset-builds/agrischemas-gxapy/tests/: conftest.py
dataset-builds/agrischemas-gxapy/tests/agrischemas_test/ebigxa/: ae_test.py  gxa_test.py  real_cases_test.py
dataset-builds/agrischemas-gxapy/tests/resources/: E-ATMX-20.out.ttl  E-MTAB-4484.out.ttl  logging-test.yml
dataset-builds/apps/: gxa_queries.py
dataset-builds/apps/agrischemas-pycli/: README.md  pyproject.toml
dataset-builds/apps/agrischemas-pycli/src/agrischemas/clients/: config.py  utils.py
dataset-builds/apps/agrischemas-pycli/src/agrischemas/clients/ebigxa/: gxa.py  gxa.py.bkp
dataset-builds/apps/agrischemas-pycli/tests/: conftest.py
dataset-builds/apps/agrischemas-pycli/tests/agrischemas/clients/: utils_test.py  utils_tests.py
dataset-builds/apps/agrischemas-pycli/tests/agrischemas/clients/ebigxa/: gxa_test.py
dataset-builds/apps/agrischemas-pycli/tests/resources/: logging-test.yml
dataset-builds/environments/: brandizi-env.sh  brandizi-virtuoso.ini  virtuoso-dev.sh  virtuosodev-env.sh
dataset-builds/query-examples/: gxa-conditions-full-text.md  gxa-gene-levels.md  gxa-studies-full-text.md  gxa-studies.md  service-n-tests.md
dataset-builds/virtuoso-server/: virtuoso-run.sh  virtuoso-upload.sh
dfw-dataset/: README.md  brandizi-env.sh  data-build.snakefile  namespaces.sh  namespaces.ttl  requirements.txt  rres-env.sh  snake-config.yaml  test-all.sh
dfw-dataset/config/environments/: brandizi-env.sh  rres-arabidopsis-env.sh  rres-env.sh
dfw-dataset/elt-tools/: brandizi-env.sh  namespaces.sh  requirements.txt
dfw-dataset/elt-tools/lib/: get-files.snakefile  get-files.yaml  get_files_utils.py  utils.py
dfw-dataset/elt-tools/sparul-mapping/: sparul-mapping.sh
dfw-dataset/elt-tools/test/: namespaces-test.sh  test-all.sh  test-utils.sh
dfw-dataset/etl-tools/: brandizi-env.sh  requirements.txt  test-all.sh.old
dfw-dataset/gxa/: TODO.md  brandizi-env.sh  data-build.sh  data-build.snakefile  default-env.sh  rres-env.sh  snake-config.yaml
dfw-dataset/gxa/experiment-list/: gxa-exp-list.xlsm
dfw-dataset/gxa/input/: gxa-arabidopsis-exps.tsv  gxa-exps.xlsm  gxa-wheat-exps.tsv
dfw-dataset/knetminer/: brandizi-env.sh  data-build.sh  data-build.snakefile  rres-arabidopsis-env.sh  rres-env.sh
dfw-dataset/knetminer/test/: sample-data-build.snakefile  sample-data-test.sh  sample-data-test.sh.old  sample_data_test.py  util-queries.md
dfw-dataset/knetminer/utils/: download-ontologies.sh  get-ontologies-cfg.yaml  get-ontologies.snakefile
doc/: GeneralTerms.md  README.md  biomol-use-case.ttl  modelling-principles.md  phi-base-use-case.ttl  references.md  semantic-annotations.ttl  trials-genes.md
doc/biomol-use-cases/: README.md  ontology-use-case.ttl  phi-base-use-case.ttl
doc/biomol-use-cases/oma-use-case/: README.md  (+4 more)
doc/ebi-gxa-use-case/: README.md  _count-tpms.py  gxa-conditions.txt  gxa-use-case.graphmlz  rnd-knet-genes-sparql.txt  rnd-knet-genes.txt
doc/glten-use-case/: glten-use-case.ttl
doc/miappe-use-case/: MIAPPE-multiple-mappings.xlsx  README.md  agrischema-miappe-modelling-initial.graphmlz  agrischema-miappe-modelling.graphmlz
doc/patents/: README.md  example-knetminer.json  example.json  example.ttl  patent-data-example.csv
doc/text-mining-use-case/: README.md  gbcl-text-mining-use-case.graphmlz  gbcl-text-mining-use-case.ttl  text-mining-use-case.ttl
drafts/201904-dfw-hackathon/: MereologyTerms.md  MolBioTerms.md  README.md  agri-schema.ttl  ahdb-use-case.md  biomol-use-case.ttl  miappe-use-case.ttl  ontology-use-case.ttl  phi-base-use-case.ttl  trials-genes.md  weather-use-case.md
drafts/201911-dfw-hackathon/: LTE Metadata Broadbalk example.xlsx  Nov 2019 Hackathon Notes.md  agrischemas-comparisons.csv  agrischemas-vs-glten.md  glten-use-case.ttl
kpyutils/: default-env.sh  web.py
lib/: default-env.sh
lib/biotools/: bioportal.py  bioportal_test.py
lib/etltools/: requirements.txt  sparqlmap.py  sparqlmap_test.py  test-all.sh  utils.py  utils_test.py
old/dfw-dataset/: logging.yaml  namespaces.ttl  requirements.txt
software/biotools/: bioportal_test.py
software/etl-tools/: test-all.sh
software/etltools/: logging-test.yaml
tools/agrischemaspy/: .venv  README.md  default-env.sh.old  pyproject.toml
tools/agrischemaspy/src/agrischemas/: config.py
tools/agrischemaspy/src/agrischemas/biotools/: __init__.py  bioportal.py
tools/agrischemaspy/src/agrischemas/etltools/: __init__.py  default-namespaces.ttl  sparql.py  sparqlmap.py  utils.py  virtuoso.py
tools/agrischemaspy/src/agrischemas/kpyutils/: web.py
tools/agrischemaspy/src/agrischemaspy/biotools/: bioportal.py
tools/agrischemaspy/src/agrischemaspy/etltools/: sparqlmap.py  utils.py
tools/agrischemaspy/src/agrischemaspy/kpyutils/: __init__.py  web.py
tools/agrischemaspy/src/resources/etltools/map-rules/: 20-eq-class-map.sparql
tools/agrischemaspy/tests/: conftest.py
tools/agrischemaspy/tests/agrischemas_test/biotools/: bioportal_test.py
tools/agrischemaspy/tests/agrischemas_test/etltools/: sparql_test.py  sparqlmap_test.py  utils_test.py  virtuoso_test.py
tools/agrischemaspy/tests/agrischemaspy_test/biotools/: bioportal_test.py
tools/agrischemaspy/tests/agrischemaspy_test/etltools/: sparqlmap_test.py  utils_test.py
tools/agrischemaspy/tests/resources/: logging-test.yml
(+123 files in other folders)
