[project]
name = "agrischemaspy"
version = "0.1.0"
description = "Draft project to convert EBI Gene Expression Atlas data into AgriSchemas RDF."
authors = [
    {name = "Marco Brandizi",email = "marco@knetminer.com"}
]
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
]

[dependency-groups]
dev = [
    "pytest (>=9.0.2,<10.0.0)"
]

[tool.poetry]
packages = [{include = "agrischemaspy", from = "src"}]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
