[project]
name = "agrischemaspy-gxapy"
version = "0.1.0"
description = "Draft project to convert EBI Gene Expression Atlas data into AgriSchemas RDF."
authors = [
    {name = "Marco Brandizi",email = "marco@knetminer.com"}
]
readme = "README.md"
requires-python = ">=3.14"

[dependency-groups]
dev = [
    "pytest (>=9.0.2,<10.0.0)"
]

[tool.poetry]
packages = [{include = "agrischemaspy", from = "src"}]

[tool.poetry.dependencies]
python = "^3.14"
agrischemaspy = {git = "https://github.com/Rothamsted/agri-schemas.git", rev = "master", subdirectory = "tools/agrischemaspy"}

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
