[project]
name = "agrischemaspy-gxapy"
version = "0.1.0"
description = "Draft project to convert EBI Gene Expression Atlas data into AgriSchemas RDF."
authors = [
    {name = "Marco Brandizi",email = "marco@knetminer.com"}
]
readme = "README.md"
requires-python = ">=3.14"

[dependency-groups]
dev = [
    "pytest (>=9.0.2,<10.0.0)"
]

[tool.poetry]
packages = [{include = "agrischemas", from = "src"}]

[tool.poetry.dependencies]
python = "^3.14"
# Since these packages are transitional, we don't publish them on PyP
agrischemaspy = {git = "https://github.com/Rothamsted/agri-schemas.git", rev = "master", subdirectory = "tools/agrischemaspy"}

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
addopts = [ "-v" ]
filterwarnings = [
  "once",
  "ignore",
  "default::Warning:agrischemas\\..*"
]
# You don't need them, it's already managed by our own logging config helper
# log_cli = true
# log_level = "DEBUG"

