[project]
name = "agrischemaspy"
version = "0.1.0"
description = ""
authors = [
  {name = "Marco Brandizi",email = "marco@knetminer.com"}
]
readme = "README.md"
requires-python = ">=3.14" # ^3.14 doesn't work with PyP


[tool.poetry.dependencies]
python = "^3.14"
rdflib = "^7.5.0"
brandizpyes = "^1.1.1"
sh = "^2.2.2"


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[dependency-groups]
dev = [
  "pytest (>=9.0.2,<10.0.0)"
]

[tool.pytest.ini_options]
addopts = [ "-v" ]
# You don't need them, it's already managed by our own logging config helper
# log_cli = true
# log_level = "DEBUG"
