[project]
name = "agrischemaspy"
version = "0.1.0"
description = ""
authors = [
  {name = "Marco Brandizi",email = "marco@knetminer.com"}
]
readme = "README.md"
requires-python = ">=3.13" # ^3.13 isn't valid in PyPI


[tool.poetry]
packages = [
  {include = "agrischemas", from = "src"}
]

[tool.poetry.dependencies]
python = "^3.13"
rdflib = "^7.5.0"
brandizpyes = "^1.1.3"
sh = "^2.2.2"
luqum = "^1.0.0"
wrapt = "^2.1.1"
assertpy = "^1.1"
requests = "^2.33.0"


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[dependency-groups]
dev = [
  "pytest (>=9.0.2,<10.0.0)",
  "isort (>=8.0.1,<9.0.0)",
  "autoflake (>=2.3.3,<3.0.0)"
]

[tool.pytest.ini_options]
addopts = [ "-v" ]
markers = [
  "integration: Marker for integration tests"
]
# You don't need them, it's already managed by our own logging config helper
# log_cli = true
# log_level = "DEBUG"
