[project]
name = "agrischemas-pycli"
version = "0.1.0"
description = "Python clients to access AgriSchemas datasets, such as the KnetMiner SPARQL endpoint."
authors = [
    {name = "marco@knetminer.com"}
]
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "rdflib (>=7.5.0,<8.0.0)",
    "brandizpyes (>=1.1.2,<2.0.0)",
    "requests (>=2.32.5,<3.0.0)",
]

[dependency-groups]
dev = [
    "pytest (>=9.0.2,<10.0.0)",
    "assertpy (>=1.1,<2.0)"
]

[tool.poetry]
packages = [{include = "agrischemas", from = "src"}]

[tool.poetry.dependencies]
python = "^3.14"
# TODO: Use only this or dependecies


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
addopts = [ "-v" ]
# Skips warning from 3rd party libs, such as rdflib
filterwarnings = [
  "once",
  "ignore",
  "default::Warning:agrischemas\\..*"
]
# You don't need them, it's already managed by our own logging config helper
# log_cli = true
# log_level = "DEBUG"
